Upgreaded Angular Version to 19

--- a/angular.json
+++ b/angular.json
@@ -70,12 +70,15 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "buildTarget": "ngx-hierarchy-demo:build"
+          },
           "configurations": {
             "production": {
-              "browserTarget": "ngx-hierarchy-demo:build:production"
+              "buildTarget": "ngx-hierarchy-demo:build:production"
             },
             "development": {
-              "browserTarget": "ngx-hierarchy-demo:build:development"
+              "buildTarget": "ngx-hierarchy-demo:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -83,7 +86,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ngx-hierarchy-demo:build"
+            "buildTarget": "ngx-hierarchy-demo:build"
           }
         },
         "test": {
